fixed overflowing cover

--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -3,7 +3,9 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 14.52px;
+    margin: 10px 0 0;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    max-width: 75vw;
 }
